test/expected/explain_main_fic_i.out
explain int main( int, char )
                       ^
24: error: invalid signature for main()
